fix(sale-form): align save and sold buttons to the right

--- a/src/app/presentation/pages/collection/components/sale-form/sale-form.component.scss
+++ b/src/app/presentation/pages/collection/components/sale-form/sale-form.component.scss
@@ -63,7 +63,7 @@
 
 .sale-form__save-btn,
 .sale-form__sold-btn {
-  align-self: flex-start;
+  align-self: flex-end;
 }
 
 .sale-form__warning {
